# tessera

./: .gitignore  .gitmodules  .roomodes  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  LICENSE.md  NOTICE  README.md  ROADMAP_V2.MD  TODO.md  flake.nix  rustfmt.toml
cargo-tessera/: CHANGELOG.md  Cargo.toml  README.md
cargo-tessera/docs/: README_zh-CN.md
cargo-tessera/src/: color_check.rs  commands.rs  main.rs  output.rs  template.rs
cargo-tessera/src/color_check/: analyzer.rs  types.rs  utils.rs  workspace.rs
cargo-tessera/src/commands/: android.rs  build.rs  check.rs  dev.rs  new.rs  plugin.rs  profiling.rs  web.rs
cargo-tessera/templates/basic/: .gitignore  Cargo.toml  Cargo.toml.hbs  Cargo.toml.template  README.md  README.md.hbs  main.rs
cargo-tessera/templates/blank/: .gitignore  Cargo.toml  Cargo.toml.hbs  README.md  README.md.hbs  (+3 more)
example/: Cargo.toml  README.md  tessera-app.toml  tessera-config.toml
example/examples/: alignment_showcase.rs  bottom_nav_bar_showcase.rs  bottom_sheet_showcase.rs  boxed_showcase.rs  button_group_showcase.rs  counter.rs  dialog_showcase.rs  ellipse_command_showcase.rs  fluid_glass.rs  fluid_glass_showcase.rs  glass_button_showcase.rs  glass_dialog_showcase.rs  glass_ellipse_showcase.rs  glass_progress_showcase.rs  glass_slider_showcase.rs  glass_switch_showcase.rs  icon_showcase.rs  image_showcase.rs  image_vector_showcase.rs  minimal_alignment_test.rs  progress_showcase.rs  scrollbar_behavior_showcase.rs  side_bar_showcase.rs  simple_alignment_demo.rs  simple_alignment_test.rs  slider_showcase.rs  tabs_showcase.rs
example/src/: animated_spacer.rs  app.rs  app_state.rs  button_demo.rs  component_showcase.rs  content_section.rs  example_components.rs  interactive_demo.rs  layout_examples.rs  lib.rs  main.rs  material_colors.rs  misc.rs  pages.rs  performance_display.rs  res.rs  ripple_demo.rs  switch_showcase.rs  text_editors.rs
tessera/: Cargo.toml
tessera-build/: Cargo.toml  README.md
tessera-build/docs/: README_CN.md
tessera-build/src/: backend_embed.rs  backend_platform.rs  lib.rs
tessera-components/: Cargo.toml  README.md  build.rs  tessera-config.toml
tessera-components/docs/: README_CN.md
tessera-components/src/: alignment.rs  app_bar.rs  badge.rs  bottom_sheet.rs  boxed.rs  button.rs  button_groups.rs  card.rs  checkbox.rs  checkmark.rs  chip.rs  column.rs  date_picker.rs  dialog.rs  divider.rs  floating_action_button.rs  flow_column.rs  flow_row.rs  fluid_glass.rs  fluid_switch.rs  gesture_recognizer.rs  glass_button.rs  glass_progress.rs  glass_slider.rs  glass_switch.rs  icon.rs  icon_button.rs  image.rs  image_vector.rs  interaction_state.rs  lazy_grid.rs  lazy_list.rs  lazy_staggered_grid.rs  lib.rs  list_item.rs  material_icons.rs  menus.rs  modifier.rs  navigation_bar.rs  navigation_rail.rs  (+35 more)
tessera-example-calculator/: Cargo.toml
tessera-example-calculator/src/: app.rs  cal.rs  lib.rs  main.rs
tessera-foundation/: Cargo.toml
tessera-foundation/src/: alignment.rs  gesture.rs  lib.rs  modifier.rs  shape_def.rs
tessera-mobile/: Cargo.toml  README.md  build.rs
tessera-mobile/src/: device.rs  dot_cargo.rs  env.rs  init.rs  lib.rs  opts.rs  project.rs  target.rs  update.rs
tessera-platform/: Cargo.toml  README.md  tessera-config.toml  tessera-plugin.toml
tessera-platform/android/: build.gradle.kts
tessera-platform/src/: clipboard.rs  lib.rs  window.rs
tessera-shard/: CHANGELOG.md  Cargo.toml
tessera-shard/src/: __private.rs  async_support.rs  lib.rs  router.rs  state.rs  task_handles.rs  tokio_runtime.rs
tessera-ui/: CHANGELOG.md  Cargo.toml
tessera-ui-basic-components/: CHANGELOG.md  Cargo.toml  README.md  build.rs
tessera-ui-basic-components/docs/: README_CN.md
tessera-ui-basic-components/src/: alignment.rs  animation.rs  app_bar.rs  badge.rs  bottom_nav_bar.rs  bottom_sheet.rs  boxed.rs  button.rs  button_group.rs  button_groups.rs  card.rs  checkbox.rs  checkmark.rs  chip.rs  column.rs  date_picker.rs  dialog.rs  divider.rs  floating_action_button.rs  flow_column.rs  flow_row.rs  fluid_glass.rs  glass_button.rs  glass_dialog.rs  glass_progress.rs  glass_slider.rs  glass_switch.rs  icon.rs  icon_button.rs  image.rs  image_vector.rs  lazy_grid.rs  lazy_list.rs  lazy_staggered_grid.rs  lib.rs  material_color.rs  material_icons.rs  md3_color.rs  menus.rs  modifier.rs  (+24 more)
tessera-ui-logo/: Cargo.toml  README.md
tessera-ui-logo/src/: app.rs  background.rs  logo.rs  main.rs
tessera-ui-macros/: CHANGELOG.md  Cargo.toml  README.md
tessera-ui-macros/docs/: README_zh-CN.md
tessera-ui-macros/src/: lib.rs
tessera-ui-shard/: CHANGELOG.md  Cargo.toml
tessera-ui-shard/src/: lib.rs  router.rs  task_handles.rs
tessera-ui/src/: __private.rs  accessibility.rs  android.rs  asset.rs  build_tree.rs  clipboard.rs  color.rs  component_tree.rs  context.rs  cursor.rs  dp.rs  dyn_eq.rs  dyn_eq_compute.rs  dyn_traits.rs  entry_point.rs  entry_registry.rs  execution_context.rs  focus.rs  focus_state.rs  ime_state.rs  keyboard_state.rs  layout.rs  lib.rs  modifier.rs  pipeline_cache.rs  pipeline_context.rs  plugin.rs  profiler.rs  prop.rs  px.rs  render_graph.rs  render_module.rs  render_pass.rs  render_scene.rs  renderer.rs  router.rs  runtime.rs  scroll.rs  test.rs  testing.rs  (+2 more)
tessera/src/: color.rs  component_tree.rs  cursor.rs  dp.rs  focus_state.rs  ime_state.rs  keyboard_state.rs  lib.rs  px.rs  renderer.rs  runtime.rs  scroll_state.rs  thread_utils.rs  tokio_runtime.rs
tessera_basic_components/: Cargo.toml
tessera_basic_components/src/: alignment.rs  boxed.rs  button.rs  checkbox.rs  column.rs  dialog.rs  fluid_glass.rs  glass.rs  glass_button.rs  image.rs  lib.rs  padding_utils.rs  pipelines.rs  pos_misc.rs  progress.rs  rect.rs  ripple_rect.rs  ripple_state.rs  row.rs  scrollable.rs  selection_highlight_rect.rs  shape_def.rs  slider.rs  spacer.rs  surface.rs  switch.rs  text.rs  text_edit_core.rs  text_editor.rs
tessera_logo/: Cargo.toml  README.md
tessera_logo/shaders/: background.wgsl  crystal.wgsl
tessera_logo/src/: app.rs  background.rs  logo.rs  main.rs
(+395 files in other folders)
