[workspace]
resolver = "3"
members = [
    "example",
    "tessera-ui",
    "tessera-ui-logo",
    "tessera-ui-basic-components",
    "tessera-ui-macros",
    "tessera-ui-shard",
]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"
repository = "https://github.com/tessera-ui/tessera"
homepage = "https://tessera-ui.github.io/tessera-official-website"

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.dev]
opt-level = 1
