[package]
name = "cargo-tessera"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI tool for Tessera UI framework - project scaffolding, development server, and build automation"
keywords = ["gui", "ui", "cli", "tessera"]
categories = ["command-line-utilities", "gui", "development-tools"]

[[bin]]
name = "cargo-tessera"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
colored = "3.0.0"
indicatif = "0.18.2"
toml = "0.9.8"
serde = { version = "1.0", features = ["derive"] }
include_dir = "0.7"
notify = "8.2.0"
dialoguer = "0.12.0"
