[package]
name = "cargo-tessera"
version = "0.5.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI tool for Tessera UI framework - project scaffolding, development server, and build automation"
keywords = ["gui", "ui", "cli", "tessera"]
categories = ["command-line-utilities", "gui", "development-tools"]
include = [
    "Cargo.toml",
    "README.md",
    "src/**",
    "templates/**",
]

[[bin]]
name = "cargo-tessera"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
owo-colors = "4.2.3"
comfy-table = "7.2.1"
indicatif = "0.18.3"
toml = "0.9.9"
serde = { version = "1.0", features = ["derive"] }
include_dir = "0.7"
notify = "8.2.0"
inquire = { version = "0.9.1", default-features = false, features = ["crossterm", "editor"] }
