[package]
name = "example"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]
name = "example"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "src/lib.rs"

[dependencies]
tessera-ui = { path = "../tessera-ui" }
tessera-components = { path = "../tessera-components" }
tokio = { version = "1.49.0", features = ["full"] }
bytemuck = { version = "1.24.0", features = ["derive"] }
image = "0.25.9"
dashmap = "6.1.0"
closure = "0.3.0"
