[package]
name = "example"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
build = "build.rs"

[lib]
crate-type = ["rlib", "cdylib"]
name = "example_lib"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "src/main.rs"

[dependencies]
tessera-ui = { path = "../tessera-ui" }
tessera-components = { path = "../tessera-components" }

[build-dependencies]
tessera-build = { path = "../tessera-build" }
