[package]
name = "example"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
build = "build.rs"

[lib]
crate-type = ["rlib", "cdylib"]
name = "example_lib"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "src/main.rs"

[dependencies]
tessera-shard = { path = "../tessera-shard" }
tessera-ui = { path = "../tessera-ui" }
tessera-components = { path = "../tessera-components" }
tessera-platform = { path = "../tessera-platform" }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.105"

[build-dependencies]
tessera-build = { path = "../tessera-build" }

[dev-dependencies]
tessera-ui = { path = "../tessera-ui", features = ["testing"] }
