[package]
name = "tessera-components"
version = "2.7.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Basic components for tessera-ui, using md3e design principles."
build = "build.rs"

[dependencies]
bytemuck = "1.24.0"
derive_setters = "0.1.8"
image = { version = "0.25.9", default-features = false, features = [
    "png",
    "jpeg",
] }
glyphon = "0.10.0"
tracing = "0.1.44"
parking_lot = "0.12.5"
tessera-ui = { path = "../tessera-ui" }
tessera-platform = { path = "../tessera-platform" }
unicode-segmentation = "1.12.0"
encase = "0.12.0"
glam = { version = "0.31.0", features = ["encase"] }
lru = "0.16.3"
smallvec = "1.15.1"
usvg = "0.47.0"
lyon_path = "1.0.16"
lyon_tessellation = "1.0.16"
thiserror = "2.0.18"
lyon_geom = "1.0.18"
material-color-utilities = "1.0.0-dev.18"
closure = "0.3.0"

[build-dependencies]
zip = "7.2.0"

[target.'cfg(target_os = "android")'.dependencies]
include-bytes-zstd = "0.1.0"
