[package]
name = "tessera-example-calculator"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]
name = "tessera_example_calculator"
path = "src/lib.rs"

[[bin]]
name = "tessera_example_calculator"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
dashmap = "6.1.0"
derive_builder = "0.20.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
parking_lot = "0.12.5"
rsc = "3.0.0"
tessera-ui = { path = "../tessera-ui" }
tessera-ui-basic-components = { path = "../tessera-ui-basic-components" }

[target.'cfg(not(target_os = "android"))'.dependencies]
clap = { version = "4.5.48", features = ["derive"] }
