[package]
name = "tessera-foundation"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Foundation primitives and shared UI building blocks for tessera-ui."

[dependencies]
tessera-ui = { path = "../tessera-ui" }
