[package]
name = "tessera-mobile"
version = "0.1.0"
authors = [
  "Tauri Programme within The Commons Conservancy",
  "Brainium Studios LLC",
  "Francesca Lovebloom <francesca@brainiumstudios.com>",
  "Tessera contributors",
]
edition.workspace = true
description = "Rust on mobile made easy."
repository = "https://github.com/tessera-ui/tessera"
readme = "README.md"
keywords = ["mobile", "ios", "android", "tessera"]
categories = ["development-tools"]
license = "Apache-2.0 OR MIT"

[package.metadata.docs.rs]
no-default-features = true
features = ["native-tls"]
default-target = "x86_64-unknown-linux-gnu"
targets = [
  "x86_64-pc-windows-msvc",
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin",
]

[lib]
name = "cargo_mobile2"
path = "src/lib.rs"

[[bin]]
name = "cargo-mobile"
required-features = ["cli"]

[[bin]]
name = "cargo-apple"
required-features = ["cli"]

[[bin]]
name = "cargo-android"
required-features = ["cli"]

[features]
cli = [
  "home",
  "dunce",
  "handlebars",
  "log",
  "serde",
  "serde_json",
  "thiserror",
  "structopt",
  "env_logger",
]
brainium = []
rustls = ["ureq/rustls"]
native-tls = ["ureq/native-tls"]
default = ["cli", "native-tls"]

[dependencies]
handlebars = "6"
serde_json = "1"
colored = "3.0"
deunicode = "1.4"
dunce = "1.0"
english-numbers = "0.3"
env_logger = { version = "0.11", optional = true }
heck = "0.5"
home = "0.5"
ignore = "0.4"
java-properties = "2"
log = "0.4"
once-cell-regex = "0.2"
path_abs = "0.5"
serde = { version = "1.0", features = ["derive"] }
structopt = { version = "0.3", optional = true }
textwrap = { version = "0.16", features = ["terminal_size"] }
thiserror = "2.0"
toml = { version = "0.9", features = ["preserve_order"] }
duct = "1.1"
which = "8"
os_pipe = "1"

[dev-dependencies]
rstest = "0.26"

[target."cfg(target_os = \"macos\")".dependencies]
core-foundation = "0.10"
x509-certificate = "0.25"
os_info = "3"
plist = "1"

[target."cfg(not(target_os = \"macos\"))".dependencies]
ureq = { version = "3", default-features = false, features = ["gzip"] }

[target."cfg(target_os = \"linux\")".dependencies]
freedesktop_entry_parser = "1.3"

[target."cfg(unix)".dependencies]
libc = "0.2"

[target."cfg(windows)".dependencies.windows]
version = "0.62.2"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_IO",
  "Win32_System_Ioctl",
  "Win32_System_Memory",
  "Win32_System_Registry",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_UI_Shell",
]

[target."cfg(windows)".build-dependencies]
embed-resource = "3"

[build-dependencies]
home = { version = "0.5", optional = true }
dunce = { version = "1", optional = true }
handlebars = { version = "6", optional = true }
log = { version = "0.4", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
thiserror = { version = "2", optional = true }
