[package]
name = "tessera-shard"
version = "0.4.2"
description = "Provide easier state access and router for tessera-ui."
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
dashmap = "6.1.0"
futures-util = "0.3.31"
parking_lot = "0.12.5"
tessera-macros = { path = "../tessera-macros" }
tessera-ui = { path = "../tessera-ui" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.51.1", features = ["full"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-futures = "0.4.55"
