[package]
name = "tessera-ui-basic-components"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Basic components for tessera-ui"

[dependencies]
bytemuck = "1.23.1"
derive_builder = "0.20.2"
earcutr = "0.5.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
glyphon = { git = "https://github.com/shadow3aaa/glyphon" }
log = "0.4.27"
parking_lot = "0.12.4"
tessera-ui = "0.1.3"
tessera-ui-macros = "0.1.0"
unicode-segmentation = "1.12.0"
