[package]
name = "tessera-ui-basic-components"
version = "1.10.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Basic components for tessera-ui"

[dependencies]
bytemuck = "1.23.2"
derive_builder = "0.20.2"
earcutr = "0.5.0"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }
glyphon = { package = "glyphon-tessera-fork", version = "0.9.3" }
tracing = "0.1.41"
parking_lot = "0.12.4"
tessera-ui = { path = "../tessera-ui" }
unicode-segmentation = "1.12.0"
encase = { version = "0.11.2", features = ["glam"] }
glam = "0.30.5"
