[package]
name = "tessera-ui-basic-components"
version = "2.5.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Basic components for tessera-ui"

[dependencies]
bytemuck = "1.24.0"
derive_builder = "0.20.2"
earcutr = "0.5.0"
image = { version = "0.25.8", default-features = false, features = [
    "png",
    "jpeg",
] }
glyphon = { package = "glyphon-tessera-fork", version = "0.9.6" }
tracing = "0.1.41"
parking_lot = "0.12.5"
tessera-ui = { path = "../tessera-ui" }
unicode-segmentation = "1.12.0"
encase = "0.12.0"
glam = { version = "0.30.9", features = ["encase"] }
lru = "0.16.2"
smallvec = "1.15.1"
usvg = "0.45.1"
lyon_path = "1.0.16"
lyon_tessellation = "1.0.16"
thiserror = "2.0.17"
lyon_geom = "1.0.18"
