[package]
name = "tessera-ui-logo"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tessera-ui = { path = "../tessera-ui" }
tessera-ui-basic-components = { path = "../tessera-ui-basic-components" }
rand = "0.9.2"
rand_pcg = "0.9.0"
tokio = { version = "1.47.1", features = ["full"] }
log = "0.4"
derive_builder = "0.20"
glam = "0.30.5"
parking_lot = "0.12"
bytemuck = { version = "1.23.1", features = ["derive"] }
image = "0.25"
delaunator = "1.0.2"
flexi_logger = { version = "0.31.2", features = ["async", "trc"] }
