[lib]
proc-macro = true

[package]
name = "tessera-ui-macros"
version = "0.2.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Macros of tessera-ui, for creating functional components."
readme = "README.md"

[features]
default = ["shard"]
shard = []

[dependencies]
heck = "0.5.0"
proc-macro2 = "1.0"
quote = "1.0.40"
syn = { version = "2.0.106", features = ["full"] }
