[package]
name = "tessera-ui-shard"
version = "0.4.0"
description = "Provide easier state access and router for Tessera UI."
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
dashmap = "6.1.0"
parking_lot = "0.12.4"
tokio = { version = "1.47.1", features = ["full"] }
