[package]
name = "tessera-ui-shard"
version = "0.4.2"
description = "Provide easier state access and router for tessera-ui."
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
dashmap = "6.1.0"
parking_lot = "0.12.5"
tokio = { version = "1.49.0", features = ["full"] }
