
[package]
name = "tessera-ui"
version = "2.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Gui Rust In Rust."
readme = "../README.md"

[features]
default = ["shard"]
shard = ["tessera-ui-shard"]

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
tracing = "0.1.41"
parking_lot = "0.12.5"
pollster = "0.4.0"
wgpu = "27.0.1"
indextree = "4.7.4"
rayon = "1.11.0"
dashmap = "6.1.0"
uuid = { version = "1.18.1", features = ["v4"] }
tessera-ui-macros = { path = "../tessera-ui-macros" }
tessera-ui-shard = { path = "../tessera-ui-shard", optional = true }
petgraph = "0.8.3"

[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2.177"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_System_Threading"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = "0.30.12"
arboard = "3.6.1"

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30.12", features = ["android-native-activity"] }
ndk-sys = "0.6.0"
jni = "0.21.1"
ndk-context = "0.1.1"
