
[package]
name = "tessera"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
parking_lot = "0.12.3"
tokio = { version = "1.45.1", features = ["full"] }
wgpu = "26.0.0"
indextree = "4.7.4"
rayon = "1.10.0"
dashmap = "6.1.0"
uuid = { version = "1.17.0", features = ["v4"] }

[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2.172"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.1", features = ["Win32_System_Threading"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = "0.30.11"

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30.11", features = ["android-native-activity"] }
ndk-sys = "0.6.0"
jni = "0.21.1"
ndk-context = "0.1.1"
