[package]
name = "tessera_basic_components"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.23.1"
derive_builder = "0.20.2"
earcutr = "0.5.0"
glyphon = "0.9.0"
log = "0.4.27"
parking_lot = "0.12.4"
tessera = { path = "../tessera" }
tessera_macros = { path = "../tessera_macros" }
unicode-segmentation = "1.12.0"
